--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ structopt = "0.3.25"
 structsy = "0.4.0"
 structsy-derive = "0.4.0"
 okapi = "0.7.0-rc.1"
-rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger", "rapidoc"] }
+rocket_okapi = { version = "0.8.0-rc.1", features = ["rapidoc"] }
 schemars = "0.8.6"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 strum = { version = "0.22", features = ["derive"] }
 derive_more = "0.99.16"
+reqwest = "0.11.6"
