--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,22 +5,40 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release-with-symbols]
+inherits = "release"
+debug = true
+
 [dependencies]
+anyhow = "1.0.51"
+derive_more = "0.99.17"
+fort = "0.4.0"
 lazy_static = "1.4.0"
+reqwest = "0.11.6"
 rocket = "0.5.0-rc.1"
+schemars = "0.8.8"
+serde_json = "1.0.72"
 structopt = "0.3.25"
 structsy = "0.4.0"
 structsy-derive = "0.4.0"
-okapi = "0.7.0-rc.1"
-rocket_okapi = { version = "0.8.0-rc.1", features = ["rapidoc"] }
-schemars = "0.8.6"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
-strum = { version = "0.22", features = ["derive"] }
-derive_more = "0.99.16"
-reqwest = "0.11.6"
-bastion = { git = "https://github.com/bastion-rs/bastion", rev = "01eeb5861abeba8f36001f453353f0ee8101b811", features = ["tokio-runtime"] }
-anyhow = "1.0.51"
 tracing = "0.1.29"
 tokio = "1.14.0"
 tracing-subscriber = "0.3.3"
+okapi = "0.7.0-rc.1"
+
+[dependencies.bastion]
+git = "https://github.com/bastion-rs/bastion"
+rev = "01eeb5861abeba8f36001f453353f0ee8101b811"
+features = ["tokio-runtime"]
+
+[dependencies.rocket_okapi]
+version = "0.8.0-rc.1"
+features = ["rapidoc"]
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
+
+[dependencies.strum]
+version = "0.23.0"
+features = ["derive"]
