--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lazy_static = "1.4.0"
 okapi = "0.7.0-rc.1"
 reqwest = "0.11.7"
 rocket = "0.5.0-rc.1"
-rocket_okapi = { version = "0.8.0-rc.1", features = ["rapidoc"] }
+rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc", "swagger"] }
 schemars = "0.8.8"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.72"
